--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+*{
+ margin: 0;
+ padding: 0; 
+ background-color: aqua;
+}
+
+h1{
   text-align: center;
+  padding-top: 5px;
+  font-size: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+hr{
+  width: 86.50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.content{
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap:wrap-reverse;
+  margin-top: 225px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.count {
+  text-align: center;
+  font-size: 85px;
+  padding-right: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.btn{
+ 
+  font-size: 25px;
+  width: 390px;
+  height:55px;
+  border-radius: 8px;
+  color:blueviolet;
+}
+
+.btn:hover{
+  color:cadetblue;
+  font-size: 30px;
 }
